[gd_scene load_steps=15 format=3 uid="uid://dsaeehi5y4i6g"]

[ext_resource type="Theme" uid="uid://etm0dk2bjjr1" path="res://Textures/main_menu.tres" id="1_s7mqb"]
[ext_resource type="Script" path="res://Scenes/GameMapEditor/World Editor/Territory Editors/Territory Editor.gd" id="2_2qh7n"]
[ext_resource type="Texture2D" uid="uid://cdkp3cl6rfyra" path="res://Images/icon.svg" id="3_3q647"]
[ext_resource type="Script" path="res://Scenes/Country Editor/TextureButton.gd" id="4_uf1kk"]
[ext_resource type="Script" path="res://Scenes/Country Editor/Territory Name Edit.gd" id="5_skodj"]
[ext_resource type="Script" path="res://Scenes/GameMapEditor/World Editor/Territory Editors/CoTerritory Input.gd" id="6_54ipa"]
[ext_resource type="Script" path="res://Scenes/Country Editor/Code Name Text.gd" id="9_ioy2f"]
[ext_resource type="Script" path="res://Scenes/Country Editor/Pop Val.gd" id="10_pnqgx"]
[ext_resource type="Script" path="res://Scenes/Country Editor/Area Val.gd" id="11_2p2gd"]
[ext_resource type="Script" path="res://Scenes/Country Editor/GDP Val.gd" id="12_s8dq1"]
[ext_resource type="Script" path="res://Scenes/Country Editor/First Name List.gd" id="13_jnxry"]
[ext_resource type="Script" path="res://Scenes/Country Editor/Last Names List.gd" id="14_imdwa"]
[ext_resource type="Script" path="res://Scenes/Country Editor/Rating Value.gd" id="15_kty70"]
[ext_resource type="Script" path="res://Scenes/Country Editor/League Rating Val.gd" id="16_04ofg"]

[node name="Territory Edit" type="GraphNode"]
self_modulate = Color(0.694804, 0.0298022, 0.425142, 1)
custom_minimum_size = Vector2(600, 1012)
offset_right = 600.0
offset_bottom = 1012.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_s7mqb")
title = " Edit Territory Information"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("2_2qh7n")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="VBoxContainer2/HBoxContainer" groups=["T_Info"]]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_3q647")
stretch_mode = 4
script = ExtResource("4_uf1kk")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="Territory Name Edit" type="LineEdit" parent="VBoxContainer2/HBoxContainer/MarginContainer" groups=["T_Info"]]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Territory"
alignment = 1
max_length = 50
clear_button_enabled = true
script = ExtResource("5_skodj")

[node name="FileDialog" type="FileDialog" parent="VBoxContainer2/HBoxContainer"]
title = "Open a File"
initial_position = 1
size = Vector2i(392, 159)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
show_hidden_files = true
use_native_dialog = true

[node name="GridContainer" type="GridContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
mouse_default_cursor_shape = 2
theme_override_constants/h_separation = -102
columns = 2

[node name="CoTerritory" type="Label" parent="VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("1_s7mqb")
text = "CoTerritory ID
"

[node name="CoTerritory Input" type="OptionButton" parent="VBoxContainer2/GridContainer" groups=["T_Info"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
text_overrun_behavior = 2
clip_text = true
expand_icon = true
fit_to_longest_item = false
script = ExtResource("6_54ipa")

[node name="Code Name" type="Label" parent="VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("1_s7mqb")
text = "Code Name
"

[node name="Code Name Text" type="LineEdit" parent="VBoxContainer2/GridContainer" groups=["T_Info"]]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_s7mqb")
placeholder_text = "Three Letter Code "
alignment = 1
max_length = 3
script = ExtResource("9_ioy2f")

[node name="Population" type="Label" parent="VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("1_s7mqb")
text = "Population"

[node name="Pop Val" type="SpinBox" parent="VBoxContainer2/GridContainer" groups=["T_Info"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_s7mqb")
step = 0.01
allow_greater = true
alignment = 1
update_on_text_changed = true
suffix = "Million"
script = ExtResource("10_pnqgx")

[node name="Area" type="Label" parent="VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("1_s7mqb")
text = "Area (Km2)
"

[node name="Area Val" type="SpinBox" parent="VBoxContainer2/GridContainer" groups=["T_Info"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_s7mqb")
step = 0.01
allow_greater = true
alignment = 1
update_on_text_changed = true
suffix = "Thousand"
script = ExtResource("11_2p2gd")

[node name="GDP" type="Label" parent="VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("1_s7mqb")
text = "GDP"

[node name="GDP Val" type="SpinBox" parent="VBoxContainer2/GridContainer" groups=["T_Info"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_s7mqb")
step = 0.01
allow_greater = true
alignment = 1
update_on_text_changed = true
suffix = "Million"
script = ExtResource("12_s8dq1")

[node name="First Names" type="Label" parent="VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 3.0
theme = ExtResource("1_s7mqb")
text = "
First Names

"

[node name="First Name List" type="TextEdit" parent="VBoxContainer2/GridContainer" groups=["T_Info"]]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.51
theme = ExtResource("1_s7mqb")
placeholder_text = " Comma Seperated"
script = ExtResource("13_jnxry")

[node name="Last Names" type="Label" parent="VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 3.0
theme = ExtResource("1_s7mqb")
text = "
Last Names

"

[node name="Last Names List" type="TextEdit" parent="VBoxContainer2/GridContainer" groups=["T_Info"]]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.51
theme = ExtResource("1_s7mqb")
placeholder_text = " Comma Seperated"
script = ExtResource("14_imdwa")

[node name="International Rating" type="Label" parent="VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 3.0
theme = ExtResource("1_s7mqb")
text = "Rating
"

[node name="Rating Value" type="SpinBox" parent="VBoxContainer2/GridContainer" groups=["T_Info"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_s7mqb")
max_value = 75.0
alignment = 1
script = ExtResource("15_kty70")

[node name="League Rating" type="Label" parent="VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
size_flags_stretch_ratio = 3.0
theme = ExtResource("1_s7mqb")
text = "League Elo
"

[node name="League Rating Val" type="SpinBox" parent="VBoxContainer2/GridContainer" groups=["T_Info"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_s7mqb")
max_value = 10000.0
step = 0.25
alignment = 1
script = ExtResource("16_04ofg")

[node name="Done" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("1_s7mqb")
text = "Done"

[connection signal="pressed" from="VBoxContainer2/HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="text_changed" from="VBoxContainer2/HBoxContainer/MarginContainer/Territory Name Edit" to="." method="_on_territory_name_edit_text_changed"]
[connection signal="file_selected" from="VBoxContainer2/HBoxContainer/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="item_selected" from="VBoxContainer2/GridContainer/CoTerritory Input" to="." method="_on_co_territory_input_item_selected"]
[connection signal="text_changed" from="VBoxContainer2/GridContainer/Code Name Text" to="." method="_on_code_name_text_text_changed"]
[connection signal="value_changed" from="VBoxContainer2/GridContainer/Pop Val" to="." method="_on_pop_val_value_changed"]
[connection signal="value_changed" from="VBoxContainer2/GridContainer/Area Val" to="." method="_on_area_val_value_changed"]
[connection signal="value_changed" from="VBoxContainer2/GridContainer/GDP Val" to="." method="_on_gdp_val_value_changed"]
[connection signal="text_changed" from="VBoxContainer2/GridContainer/First Name List" to="." method="_on_first_name_list_text_changed"]
[connection signal="text_changed" from="VBoxContainer2/GridContainer/Last Names List" to="." method="_on_last_names_list_text_changed"]
[connection signal="value_changed" from="VBoxContainer2/GridContainer/Rating Value" to="." method="_on_rating_value_value_changed"]
[connection signal="value_changed" from="VBoxContainer2/GridContainer/League Rating Val" to="." method="_on_league_rating_val_value_changed"]
[connection signal="pressed" from="VBoxContainer2/Done" to="." method="_on_done_pressed"]
